--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <li><a href="#menu">Menu</a></li> 
               <li><a href="#">Reservations</a></li>
               <li><a href="#">News</a></li>
-              <li><a href="#">Rview</a></li>      
+              <li><a href="#">Rviews</a></li>      
             </ul>
           </nav>
         </div>
